<resources>
    <string name="app_name">Mangal Ho</string>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="error_connecting">Error Connecting</string>
    <string name="please_wait">Please wait...</string>
    <string name="cancel">Cancel</string>
    <string name="higest_education">Higest Education *</string>
    <string name="education">Education</string>
    <string name="work_area">Work Place *</string>
    <string name="work_experiecnce">Work Experience</string>
    <string name="other">Other</string>
    <string name="full_name">Full Name *</string>
    <string name="email">Email ID *</string>
    <string name="password">Password *</string>
    <string name="title_dialog">Mangal Ho</string>
    <string name="msg_dialog">Are you sure want to close Mangal Ho?</string>
    <string name="yes_dialog">Yes!</string>
    <string name="no_dialog">No</string>
    <string name="cancel_dialog" translatable="false">Cancel</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_shortlisted">Shortlisted</string>
    <string name="nav_visitor">Profile Visitors</string>
    <string name="nav_interest">Interest</string>
    <string name="nav_events">News</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="val_pass_c">Please enter password between 6-13 Digit.</string>
    <string name="val_new_pas">Please enter new password</string>
    <string name="val_c_pas">Please enter confirm password</string>
    <string name="val_n_c_pas">Password  does not match!</string>
    <string name="internet_connection">Please enable your internet connection.</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="folder_all">All Images</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">You can add only 5 images</string>
    <string name="action_done">Done</string>
    <string name="action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="photos_unit">Photos : %d</string>
    <string name="photo_unit">Photo : %d</string>
    <string name="no_photo_unit">No photo</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="error_image_not_exist">Image error</string>
    <string name="error_no_permission">Has no permission</string>
    <string name="permission_dialog_title">Permission Deny</string>
    <string name="permission_dialog_ok">OK</string>
    <string name="permission_dialog_cancel">CANCEL</string>
    <string name="permission_rationale_write_storage">Storage write permission is needed to save the image.</string>
    <string name="val_dob">Please select dob.</string>
    <string name="val_height">Please select height.</string>
    <string name="val_state">Please select state.</string>
    <string name="val_district">Please select district.</string>
    <string name="val_city">Please enter city.</string>
    <string name="val_education">Please enter education.</string>
    <string name="val_work_area">Please enter work area.</string>
    <string name="val_occupations">Please select occupations.</string>
    <string name="val_organization">Please enter organization name.</string>
    <string name="val_income">Please select annual income.</string>
    <string name="val_blood">Please select blood group.</string>
    <string name="val_aadhar">Please enter correct aadhaar number.</string>
    <string name="val_maritial_status">Please select marital status.</string>
    <string name="val_gotra">Please enter gotra.</string>
    <string name="val_manglik">Please select Manglik.</string>
    <string name="select_manglik">Select Manglik.</string>
    <string name="val_birth_time">Please select birth time.</string>
    <string name="val_birth_place">Please enter birth place.</string>
    <string name="val_gotra_nanihal">Please enter gotra nanihal.</string>
    <string name="val_full_name">Please enter your full name</string>
    <string name="val_mobile">Please enter correct mobile number.</string>
    <string name="val_mobile_whats">Please enter correct whatsapp number.</string>
    <string name="select_occupation">Select Occupation</string>
    <string name="mother_occupation">Select Mother Occupation</string>
    <string name="father_occupation">Select Father Occupation</string>
    <string name="select_income">Select Income</string>
    <string name="select_family_status">Select Family Status</string>
    <string name="select_family_type">Select Family Type</string>
    <string name="select_family_value">Select Family Value</string>
    <string name="brothers">Brother(s)</string>
    <string name="sisters">Sister(s)</string>
    <string name="select_state">Select State</string>
    <string name="close">Close</string>
    <string name="select_district">Select District</string>
    <string name="val_grandf">Please enter grandfather name</string>
    <string name="val_mgrandf">Please enter maternal grandfather name</string>
    <string name="val_father_name">Please enter father name</string>
    <string name="val_mother_name">Please enter mother name</string>
    <string name="val_address">Please enter address</string>
    <string name="val_pincode">Please enter pincode</string>
    <string name="val_father_occupation">Please select father occupation</string>
    <string name="val_mother_occupation">Please select mother occupation</string>
    <string name="select_brother">Please select brother</string>
    <string name="select_sister">Please select sister</string>
    <string name="val_select_family_income">Please select family Income</string>
    <string name="val_family_status">Please select family status</string>
    <string name="val_family_type">Please select family type</string>
    <string name="val_family_value">Please select family value</string>
    <string name="val_challanged">Please select Physical challenged</string>
    <string name="val_complexion">Please select complexion</string>
    <string name="val_body_type">Please select body type</string>
    <string name="val_weight">Please enter weight</string>
    <string name="val_about_me">Please enter about me</string>
    <string name="select_challenged">Select Physiscal Challenged</string>
    <string name="select_bodytype">Select Body Type</string>
    <string name="select_blood">Select BloodGroup</string>
    <string name="select_complexion">Select Complexion</string>
    <string name="select_height">Select Height</string>
    <string name="select_dob">Select Date of Birth.</string>
    <string name="select_maritial_status">Select Marital Status</string>
    <string name="select_dietary">Select Dietary</string>
    <string name="select_drink">Select Drink</string>
    <string name="select_smoking">Select Smoking</string>
    <string name="select_hobbies">Select Hobbies</string>
    <string name="select_intersts">Select Interests</string>
    <string name="select_language">Select Language</string>
    <string name="val_dietary">Please select dietary habits</string>
    <string name="val_drink">Please select drink habits</string>
    <string name="val_smoking">Please select smoking habits</string>
    <string name="val_language">Please select language</string>
    <string name="val_hobbies">Please select hobbies</string>
    <string name="val_interest">Please select interests</string>
    <string name="brother">Brother</string>
    <string name="sister">Sister</string>
    <string name="about_family">About Family</string>
    <string name="grandfather_name">Grandfather Name</string>
    <string name="maternal_grandfather_name">Maternal Grandfather Name</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="address">Address</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="mobile_number"> Mobile Number</string>
    <string name="father_s_occpation">Father\'s Occpation</string>
    <string name="mother_s_occpation">Mother\'s Occpation</string>
    <string name="brother_s">Brother(s)</string>
    <string name="sister_s">Sister(s)</string>
    <string name="family_income">Family Income</string>
    <string name="family_status">Family Status</string>
    <string name="family_type">Family Type</string>
    <string name="family_value">Family Value</string>
    <string name="family_based_out_of">Family based out of</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="city_enter">City</string>
    <string name="about_me">About Me</string>
    <string name="about">About</string>
    <string name="weight_kg">Weight(Kg)</string>
    <string name="body_type">Body Type</string>
    <string name="complexion">Complexion</string>
    <string name="challenged">Physical Challenged</string>
    <string name="blood_group">Blood Group</string>
    <string name="save">Save</string>
    <string name="get_started">GET STARTED</string>
    <string name="basic_details">Basic Details</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="gotra_txt">Gotra</string>
    <string name="gotra_nanihal_txt">Gotra Nanihal</string>
    <string name="pincode">Pincode</string>
    <string name="annual_income">Annual Income</string>
    <string name="you_haven_t_any_profile_visitor">No one as yet visited your profile.</string>
    <string name="no_news">No news available.</string>
    <string name="you_haven_t_shortlisted_any_profile_yet">You haven\'t shortlisted any profile yet.</string>
    <string name="delete_pic">Delete Picture</string>
    <string name="msg_delete_img">Click ok for delete this picture</string>
    <string name="no_image">No images available</string>
    <string name="not_delete_msg">You cannot delete the profile picture. Please select anthore photo as profile picture to delete this picture.</string>
    <string name="logout_msg">Are you sure want to logout?</string>
    <string name="terms_header">Terms &amp; Conditions</string>
    <string name="privacy_header">Privacy Policy</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="contact_us">Contact Us</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="aadhaar_no">Aadhaar No.</string>
    <string name="important_details">Important Details</string>
    <string name="occupation1">Occupation</string>
    <string name="organization_name1">Organization Name</string>
    <string name="login">Login</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_have_any_work_experience">Do you have any work experience ?</string>
    <string name="text_value">Enter Your Mobile Number For Login</string>
    <string name="text_value6">Please Enter Your Information For Registration</string>
    <string name="text_value5">Already have an account? <font color="#0000FF">Log In Here</font></string>
    <string name="text_value1">By Logging in, you agree to our<font color="#0000FF">Terms of use</font> and <font color="#0000FF">Privacy policy</font></string>
    <string name="text_value2">By Signup up, you agree to our\n <font color="#0000FF">Terms of use</font> and <font color="#0000FF">Privacy policy</font></string>
    <string name="login_or_signup"><font color="#000"><b>Login</b></font> or <font color="#000"><b>Signup</b></font></string>
    <string name="singup">Sign up</string>
</resources>