<?xml version="1.0" encoding="utf-8"?>
<layout>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bytes.mangalho.activity.editprofile.ImportantDetailsActivity">

    <RelativeLayout
        android:id="@+id/action_bar_menus"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow"
                android:textColor="@color/white" />

        </LinearLayout>

        <com.bytes.mangalho.view.CustomTextViewBold
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/important_details"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar_menus">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp">

            <com.bytes.mangalho.view.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/education"
                android:textColor="@color/textcolor"
                android:textSize="18sp" />

            <com.bytes.mangalho.view.InputOpenFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:visibility="visible">

            </com.bytes.mangalho.view.InputOpenFieldView>
            <com.bytes.mangalho.view.CustomTextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/higest_education"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_14sdp" />

            <com.bytes.mangalho.view.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_education"
                android:textColor="@color/text_color_light"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardElevation="0dp">

                <com.bytes.mangalho.view.CustomEditText
                    android:id="@+id/etEducation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@drawable/bg_et"
                    android:inputType="text"
                    android:padding="10dp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />

            </androidx.cardview.widget.CardView>
            <com.bytes.mangalho.view.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/work_experiecnce"
                android:textColor="@color/textcolor"
                android:textSize="18sp" />

            <com.bytes.mangalho.view.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/do_you_have_any_work_experience"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/workRG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/yesRadioBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/noRadioBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:checked="true"
                    android:text="@string/no"
                    android:textSize="12sp" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/llWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.bytes.mangalho.view.CustomTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/work_area"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_14sdp" />

                <com.bytes.mangalho.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/val_work_area"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/_12sdp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardElevation="0dp">

                    <com.bytes.mangalho.view.CustomEditText
                        android:id="@+id/etWorkArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/bg_et"
                        android:inputType="text"
                        android:padding="10dp"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/_12sdp" />

                </androidx.cardview.widget.CardView>
                <com.bytes.mangalho.view.CustomTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/occupation1"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_14sdp" />

                <com.bytes.mangalho.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/val_occupations"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/_12sdp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardElevation="0dp">

                    <com.bytes.mangalho.view.CustomEditText
                        android:id="@+id/etoccupations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/bg_et"
                        android:drawableRight="@drawable/ic_down_arrow"
                        android:editable="false"
                        android:imeOptions="actionNext"
                        android:focusable="false"
                        android:padding="10dp"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/_12sdp" />
                </androidx.cardview.widget.CardView>
                <com.bytes.mangalho.view.CustomTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/organization_name1"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_14sdp" />

                <com.bytes.mangalho.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/val_organization"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/_12sdp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardElevation="0dp">

                    <com.bytes.mangalho.view.CustomEditText
                        android:id="@+id/etorganization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/bg_et"
                        android:inputType="text"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/_12sdp" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <com.bytes.mangalho.view.CustomButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_btn_rounded"
                android:gravity="center"
                android:textAllCaps="false"
                android:text="@string/save"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/RRsncbar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"></RelativeLayout>


</RelativeLayout>
</layout>
